anv: gen9 doesn't support fast clear on single-sampled SRGB buffers

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=108911

Signed-off-by: Samuel Iglesias Gonsálvez <siglesias@igalia.com>